# poetry_django

./: .gitignore  Jenkinsfile  db.sqlite3  manage.py  pyproject.toml
api/: urls.py
api/migrations/: 0001_initial.py
testing_poetry/: asgi.py  settings.py  urls.py  wsgi.py
